[gd_scene load_steps=13 format=3 uid="uid://cmfnadw1ylpyf"]

[ext_resource type="Script" path="res://Scenes/3D/Crater/crater.gd" id="1_d4oij"]
[ext_resource type="PackedScene" uid="uid://bve6skbomtefn" path="res://Scenes/UI/Debug/ScreenInfo.tscn" id="2_lvtxc"]
[ext_resource type="FontFile" uid="uid://b2m567grun6v" path="res://Resources/Fonts/JetBrainsMono[wght].ttf" id="3_nnn8h"]
[ext_resource type="PackedScene" uid="uid://des2n00ov1bh7" path="res://Scenes/3D/Camera/orbit_cam.tscn" id="4_jwtmh"]
[ext_resource type="PackedScene" uid="uid://b2r5hpb68kegk" path="res://Scenes/3D/Core/MarchingCube/chunk_manager.tscn" id="5_g0mu4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohd1f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0d22"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_1u2ra"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_670gy"]
shading_mode = 2
diffuse_mode = 3
specular_mode = 2
disable_ambient_light = true
disable_fog = true
vertex_color_use_as_albedo = true
albedo_color = Color(100, 100, 100, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 30.0
disable_receive_shadows = true
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="Environment" id="Environment_l0uo2"]
background_mode = 1
background_energy_multiplier = 0.0
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.03
tonemap_mode = 3
glow_enabled = true
glow_normalized = true
glow_blend_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jwgjv"]
shading_mode = 0
albedo_color = Color(0, 1, 0.639216, 1)

[sub_resource type="SphereMesh" id="SphereMesh_50ggj"]
material = SubResource("StandardMaterial3D_jwgjv")
radius = 0.01
height = 0.02

[node name="Crater" type="Node3D"]
script = ExtResource("1_d4oij")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1

[node name="DebugInfo" type="PanelContainer" parent="MarginContainer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/DebugInfo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/DebugInfo/MarginContainer"]
layout_mode = 2

[node name="ScreenInfo" parent="MarginContainer/Control/DebugInfo/MarginContainer/VBoxContainer" instance=ExtResource("2_lvtxc")]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24

[node name="GenTimeLabel" type="Label" parent="MarginContainer/Control/DebugInfo/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nnn8h")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohd1f")
text = "Gen. Time :"

[node name="MapGenDebug" type="PanelContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -168.0
offset_right = 240.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MapGenDebug"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control/MapGenDebug/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_n0d22")
text = "MapGenDebug"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/MapGenDebug/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control/MapGenDebug/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="ThreadSpinbox" type="SpinBox" parent="MarginContainer/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 1.0
alignment = 3
prefix = "Threads"

[node name="SeedLineEdit" type="LineEdit" parent="MarginContainer/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "219"
placeholder_text = "Seed"
alignment = 2

[node name="RegenButton" type="Button" parent="MarginContainer/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Regenerate"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="DirectionalLight3D"]
transform = Transform3D(21.23, 0, 0, 0, 21.23, -2.84717e-06, 0, 2.84717e-06, 21.23, 0, -6.70552e-05, 500)
cast_shadow = 0
mesh = SubResource("QuadMesh_1u2ra")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_670gy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l0uo2")

[node name="OrbitCam" parent="." instance=ExtResource("4_jwtmh")]

[node name="MouseHitPoint" type="MeshInstance3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="MouseHitPoint"]
mesh = SubResource("SphereMesh_50ggj")

[node name="ChunkManager" parent="." instance=ExtResource("5_g0mu4")]
chunks_dimension = Vector3i(32, 2, 32)

[connection signal="pressed" from="MarginContainer/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/RegenButton" to="." method="_on_regen_button_pressed"]
